@@ -24,7 +24,6 @@ kn broker delete NAME
 ### Options
 
 ```
-      --async              DEPRECATED: please use --no-wait instead. Do not wait for 'broker delete' operation to be completed. (default true)
   -h, --help               help for delete
   -n, --namespace string   Specify the namespace to operate in.
       --no-wait            Do not wait for 'broker delete' operation to be completed. (default true)
